--- a/Advanced-House-Price-Prediction/Advanced-House-Price-Prediction-EDA.ipynb
+++ b/Advanced-House-Price-Prediction/Advanced-House-Price-Prediction-EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -651,21 +651,21 @@
        "4       WD        Normal     250000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "train = pd.read_csv('C:\\\\Users\\\\krish\\\\Downloads\\\\House-prices-advanced-regression\\\\train.csv')\n",
+    "#Data Loading\n",
+    "train = pd.read_csv('C:\\\\Users\\\\krish\\\\OneDrive\\\\Desktop\\\\Advanced-House-Price-Prediction\\\\train.csv')\n",
     "print('train_dim:', train.shape)\n",
     "train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -693,18 +693,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Missing Values\n",
     "train.isna().sum()[train.isna().sum()>0].sort_values(ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -734,6 +735,7 @@
     }
    ],
    "source": [
+    "#Missing Values percentage\n",
     "Nan_features = [features for features in train.columns if train[features].isna().sum()>0]\n",
     "\n",
     "for feature in Nan_features:\n",
@@ -742,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -977,6 +979,7 @@
     }
    ],
    "source": [
+    "#Relationship b/w missing value and sale price\n",
     "for feature in Nan_features:\n",
     "    df = train.copy()\n",
     "    df[feature] = np.where(df[feature].isna(),1,0)\n",
@@ -988,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1323,7 @@
        "4     250000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1424,7 @@
        "4       2000          2000       2000.0    2008"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -1558,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -1601,7 +1604,7 @@
     }
    ],
    "source": [
-    "## Here we will compare the difference between All years feature with SalePrice\n",
+    "## Here we will compare the difference between All years feature with SalePrice with scatter plot\n",
     "\n",
     "for feature in Yr_features:\n",
     "    data = train.copy()\n",
@@ -1617,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1717,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1898,7 @@
        "4           1           3          0         0        0      12  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1911,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2306,7 +2309,7 @@
        "4           84              0            0     250000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2320,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2532,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38\n",
+      "(25,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MiscVal          24.451640\n",
+       "PoolArea         14.813135\n",
+       "LotArea          12.195142\n",
+       "3SsnPorch        10.293752\n",
+       "LowQualFinSF      9.002080\n",
+       "KitchenAbvGr      4.483784\n",
+       "BsmtFinSF2        4.250888\n",
+       "ScreenPorch       4.117977\n",
+       "BsmtHalfBath      4.099186\n",
+       "EnclosedPorch     3.086696\n",
+       "OpenPorchSF       2.361912\n",
+       "SalePrice         1.880941\n",
+       "BsmtFinSF1        1.683771\n",
+       "WoodDeckSF        1.539792\n",
+       "TotalBsmtSF       1.522688\n",
+       "MSSubClass        1.406210\n",
+       "1stFlrSF          1.375342\n",
+       "GrLivArea         1.365156\n",
+       "BsmtUnfSF         0.919323\n",
+       "2ndFlrSF          0.812194\n",
+       "OverallCond       0.692355\n",
+       "TotRmsAbvGrd      0.675646\n",
+       "HalfBath          0.675203\n",
+       "Fireplaces        0.648898\n",
+       "BsmtFullBath      0.595454\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#checking skewness\n",
+    "\n",
+    "from scipy.stats import skew \n",
+    "\n",
+    "numeric_dtypes = ['int16', 'int32', 'int64', 'float16', 'float32', 'float64']\n",
+    "numerics2 = []\n",
+    "for i in train.columns:\n",
+    "    if train[i].dtype in numeric_dtypes:\n",
+    "        numerics2.append(i)\n",
+    "print(len(numerics2))\n",
+    "\n",
+    "skew_features = train[numerics2].apply(lambda x: skew(x)).sort_values(ascending = False)\n",
+    "high_skewed  = skew_features[skew_features>0.5]\n",
+    "print(high_skewed.shape)\n",
+    "skew_index = high_skewed.index\n",
+    "high_skewed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -2740,9 +2811,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Log tranform"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2814,6 +2894,127 @@
     "        plt.show()\n",
     "    except:\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LotArea          12.195142\n",
+       "BsmtFinSF2        4.250888\n",
+       "ScreenPorch       4.117977\n",
+       "EnclosedPorch     3.086696\n",
+       "OpenPorchSF       2.361912\n",
+       "SalePrice         1.880941\n",
+       "BsmtFinSF1        1.683771\n",
+       "WoodDeckSF        1.539792\n",
+       "TotalBsmtSF       1.522688\n",
+       "1stFlrSF          1.375342\n",
+       "GrLivArea         1.365156\n",
+       "BsmtUnfSF         0.919323\n",
+       "2ndFlrSF          0.812194\n",
+       "GarageArea        0.179796\n",
+       "LotFrontage            NaN\n",
+       "MasVnrArea             NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "skew_log = data[continuous_features].apply(lambda x: skew(x)).sort_values(ascending=False)\n",
+    "skew_log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Box-Cox "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.special import boxcox1p\n",
+    "from scipy.stats import boxcox_normmax\n",
+    "\n",
+    "for i in skew_index:\n",
+    "    train[i] = boxcox1p(train[i], boxcox_normmax(train[i] + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PoolArea         14.476284\n",
+       "3SsnPorch         7.744137\n",
+       "LowQualFinSF      7.392523\n",
+       "MiscVal           5.199813\n",
+       "KitchenAbvGr      3.953381\n",
+       "BsmtHalfBath      3.925130\n",
+       "ScreenPorch       3.328194\n",
+       "BsmtFinSF2        2.645006\n",
+       "EnclosedPorch     2.285796\n",
+       "2ndFlrSF          0.883107\n",
+       "WoodDeckSF        0.776782\n",
+       "HalfBath          0.711552\n",
+       "OpenPorchSF       0.624656\n",
+       "BsmtFullBath      0.590504\n",
+       "Fireplaces        0.514500\n",
+       "TotalBsmtSF       0.452285\n",
+       "MSSubClass        0.431145\n",
+       "BsmtFinSF1        0.381851\n",
+       "OverallCond       0.335371\n",
+       "BsmtUnfSF         0.053031\n",
+       "TotRmsAbvGrd      0.040872\n",
+       "SalePrice         0.029469\n",
+       "GrLivArea         0.005867\n",
+       "1stFlrSF         -0.006599\n",
+       "LotArea          -0.185294\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#cheking skewness after applying box-cox\n",
+    "skew_boxcox = train[skew_index].apply(lambda x: skew(x)).sort_values(ascending=False)\n",
+    "skew_boxcox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# distplot after box-cox\n",
+    "# for feature in skew_index:\n",
+    "#     data = train.copy()\n",
+    "#     plt.figure(figsize=(10,5))\n",
+    "#     sns.distplot(data[feature])\n",
+    "# #     plt.title(feature)\n",
+    "# #     plt.xlabel(feature)\n",
+    "# #     plt.ylabel('median of SalePrice')\n",
+    "#     plt.show()"
    ]
   },
   {
