--- a/Feature Engineering/2. Feature Engineering-Handling Categorical Feature-Part-1.ipynb
+++ b/Feature Engineering/2. Feature Engineering-Handling Categorical Feature-Part-1.ipynb
@@ -221,7 +221,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "\n",
-    "data = pd.read_csv('C:\\\\Users\\\\krish\\\\OneDrive\\\\Desktop\\\\Kaggle\\\\mercedes-benz-greener-manufacturing\\\\train.csv')\n",
+    "data = pd.read_csv('mercedes.csv')\n",
     "print(data.shape)\n",
     "data.head()"
    ]
@@ -449,8 +449,8 @@
        "ay      54\n",
        "a       47\n",
        "t       29\n",
-       "k       25\n",
        "i       25\n",
+       "k       25\n",
        "b       21\n",
        "ao      20\n",
        "ag      19\n",
@@ -546,16 +546,16 @@
        "      <th>X3</th>\n",
        "      <th>X4</th>\n",
        "      <th>X5</th>\n",
-       "      <th>X1_d</th>\n",
-       "      <th>X1_ab</th>\n",
        "      <th>X1_q</th>\n",
+       "      <th>X1_ab</th>\n",
+       "      <th>X1_d</th>\n",
        "      <th>X1_g</th>\n",
        "      <th>X1_p</th>\n",
        "      <th>...</th>\n",
-       "      <th>X5_y</th>\n",
-       "      <th>X5_h</th>\n",
        "      <th>X5_u</th>\n",
+       "      <th>X5_h</th>\n",
        "      <th>X5_g</th>\n",
+       "      <th>X5_y</th>\n",
        "      <th>X5_x</th>\n",
        "      <th>X5_f</th>\n",
        "      <th>X5_o</th>\n",
@@ -578,9 +578,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -602,10 +602,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -691,9 +691,9 @@
        "</div>"
       ],
       "text/plain": [
-       "  X1  X2 X3 X4 X5  X1_d  X1_ab  X1_q  X1_g  X1_p  ...  X5_y  X5_h  X5_u  X5_g  \\\n",
-       "0  v  at  a  d  u     0      0     0     0     0  ...     0     0     1     0   \n",
-       "1  t  av  e  d  y     0      0     0     0     0  ...     1     0     0     0   \n",
+       "  X1  X2 X3 X4 X5  X1_q  X1_ab  X1_d  X1_g  X1_p  ...  X5_u  X5_h  X5_g  X5_y  \\\n",
+       "0  v  at  a  d  u     0      0     0     0     0  ...     1     0     0     0   \n",
+       "1  t  av  e  d  y     0      0     0     0     0  ...     0     0     0     1   \n",
        "2  w   n  c  d  x     0      0     0     0     0  ...     0     0     0     0   \n",
        "3  t   n  f  d  x     0      0     0     0     0  ...     0     0     0     0   \n",
        "4  v   n  f  d  h     0      0     0     0     0  ...     0     1     0     0   \n",
@@ -720,6 +720,13 @@
     "print(df.shape)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
